src/test/resources/typeSystemTestModels/valid/expressions/SuffixOp.java
package typeSystemTestModels.valid.expressions;

public class SuffixOp {

  public void TestSuffixOp(){
    int[] nn = {1,2};
    nn[0]++;
    int n = 1;
    n++;
    double d = 1.2;
    d--;
  }
}