src/test/resources/typeSystemTestModels/invalid/expressions/SuffixOp.java
package typeSystemTestModels.invalid.expressions;

import java.lang.String;

public class SuffixOp {

  public void TestSuffixOp(){
    boolean b = true;
    b++;
    String s = "haha";
    s--;
  }
}